добавление изменений в local storage

--- a/germax-frontend/src/templates/components/content-page-admin-reservation-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-admin-reservation-management/index.html
@@ -87,9 +87,12 @@
 							</button>
 							<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
 								<li><a class="dropdown-item edit-reservation" href="#">Éditer</a></li>
-								<li><a class="dropdown-item delete-action" href="#">Supprimer</a></li>
 								<li>
-									<a class="dropdown-item view-details" href="#" data-bs-toggle="modal" data-bs-target="#detailsModal">Voir les détails</a>
+									<a class="dropdown-item delete-action" href="#">Supprimer</a>
+								</li>
+								<li>
+									<a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
+										data-bs-target="#detailsModal">Voir les détails</a>
 								</li>
 
 							</ul>
