les données restent dans Local storage

--- a/germax-frontend/src/templates/components/content-page-admin-reservation-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-admin-reservation-management/index.html
@@ -64,12 +64,12 @@
 					<td>Enseignant A</td>
 					<td>Laptop</td>
 					<td>
-						<span class="view-mode">2023-04-01</span>
-						<input type="date" class="edit-mode d-none" value="2023-04-01">
+						<span class="view-mode" data-name="startdate">2023-04-01</span>
+						<input type="date" class="edit-mode d-none" name="startdate" value="2023-04-01">
 					</td>
 					<td>
-						<span class="view-mode">2023-04-03</span>
-						<input type="date" class="edit-mode d-none" value="2023-04-03">
+						<span class="view-mode" data-name="enddate">2023-04-03</span>
+						<input type="date" class="edit-mode d-none" name="enddate" value="2023-04-03">
 					</td>
 					<td>
 						<span class="view-mode">Actif</span>
