vérification pour que la date sélectionnée depasse pas les limites

--- a/germax-frontend/src/templates/components/content-page-admin-reservation-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-admin-reservation-management/index.html
@@ -66,11 +66,14 @@
 					<td>
 						<span class="view-mode" data-name="startdate">2023-04-01</span>
 						<input type="date" class="edit-mode d-none" name="startdate" value="2023-04-01">
+						<span class="error-message d-none"></span> <!-- Элемент для сообщения об ошибке -->
 					</td>
 					<td>
 						<span class="view-mode" data-name="enddate">2023-04-03</span>
 						<input type="date" class="edit-mode d-none" name="enddate" value="2023-04-03">
+						<span class="error-message d-none"></span> <!-- Элемент для сообщения об ошибке -->
 					</td>
+
 					<td>
 						<span class="view-mode">Actif</span>
 						<select class="edit-mode d-none">
